--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://www.gravo-lan.github.io/futurefundswebsite",
+  "start_url": "。",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
