Change homepage syntax

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Future Funds Website",
   "version": "1.0.0",
-  "homepage": "gravo-lan.github.io/futurefundswebsite",
+  "homepage": "https://gravo-lan.github.io/futurefundswebsite",
   "description": "Future Funds Initiative Website",
   "keywords": [
     "Clapy",
