--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "homepage": "https://gravo-lan.github.io/futurefundswebsite/",
   "description": "Future Funds Initiative Website",
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.2",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-scripts": "5.0.1",
-    "typescript": "5.6.3"
+    "typescript": "^4.9.5",
+    "react-native-web": "0.19.13"
   },
   "scripts": {
     "predeploy": "npm run build",
